[metadata]
name = rosbags-image
version = 0.9.1
author = Ternaris
author_email = team@ternaris.com
home_page = https://gitlab.com/ternaris/rosbags-image
description = Pure Python library to convert ros image message data from and to opencv2.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    conversion
    cv_bridge
    image
    compressedimage
    message
    msg
    opencv
    ros
    rosbag
    rosbag2
    rosbags
license = Apache 2.0
license_files = LICENSE.txt
platform = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Typing :: Typed
project_urls =
  Code = https://gitlab.com/ternaris/rosbags-image
  Documentation = https://ternaris.gitlab.io/rosbags-image
  Issue tracker = https://gitlab.com/ternaris/rosbags-image/issues

[options]
include_package_data = true
package_dir =
    = src
packages = find_namespace:
zip_safe = false
python_requires =
    >=3.8.2
setup_requires =
    setuptools >=40.8.0
    wheel
install_requires =
    numpy
    opencv-python-headless
    rosbags

[options.extras_require]
dev =
    darglint
    flake8
    flake8-annotations
    flake8-bugbear
    flake8-commas
    flake8-comprehensions
    flake8-docstrings
    flake8-fixme
    flake8-isort
    flake8-mutable
    flake8-print
    flake8-pytest-style
    flake8-quotes
    flake8-return
    flake8-simplify
    flake8-type-checking
    flake8-use-fstring
    pep8-naming
    pytest
    pytest-cov
    pytest-flake8
    pytest-mypy
    pytest-pylint
    pytest-yapf3
    sphinx
    sphinx-autodoc-typehints
    sphinx-rtd-theme
    yapf

[options.packages.find]
where = src

[options.package_data]
* = py.typed

[sdist]
formats = gztar, zip

[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    if __name__ == '__main__':

[flake8]
avoid-escape = False
docstring_convention = google
docstring_style = google
extend-exclude = venv*,.venv*
extend-select =
    # docstrings
    D204,
    D400,
    D401,
    D404,
    D413,
ignore =
    # do not require annotation of `self`
    ANN101,
    # handled by B001
    E722,
    # allow line break after binary operator
    W504,
max-line-length = 100
strictness = long
suppress-none-returning = True

[isort]
include_trailing_comma = True
line_length = 100
multi_line_output = 3

[mypy]
explicit_package_bases = True
mypy_path = $MYPY_CONFIG_FILE_DIR/src
namespace_packages = True
strict = True

# [mypy-cv2]
# ignore_missing_imports = True

[pydocstyle]
convention = google
add-select = D204,D400,D401,D404,D413

[pylint.FORMAT]
max-line-length = 100

[pylint.'MESSAGES CONTROL']
enable = all
disable =
    duplicate-code,
    locally-disabled,
    suppressed-message,
    ungrouped-imports,
    # isort (pylint FAQ)
    wrong-import-order,
    # mccabe (pylint FAQ)
    too-many-branches,
    # fixme
    fixme,
    # pep8-naming (pylint FAQ, keep: invalid-name)
    bad-classmethod-argument,
    bad-mcs-classmethod-argument,
    no-self-argument,
    # pycodestyle (pylint FAQ)
    bad-indentation,
    bare-except,
    line-too-long,
    missing-final-newline,
    multiple-statements,
    trailing-whitespace,
    unnecessary-semicolon,
    unneeded-not,
    # pydocstyle (pylint FAQ)
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    # pyflakes (pylint FAQ)
    undefined-variable,
    unused-import,
    unused-variable,
extension-pkg-whitelist =
    cv2

[yapf]
based_on_style = google
column_limit = 100
allow_split_before_dict_value = false
dedent_closing_brackets = true
indent_dictionary_value = false

[tool:pytest]
addopts =
    -v
    --flake8
    --mypy
    --pylint
    --yapf
    --cov=src
    --cov-branch
    --cov-report=html
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --junitxml=report.xml
junit_family=xunit2
